--- a/conf/spark.conf
+++ b/conf/spark.conf
@@ -1,3 +1,3 @@
 spark.app.name = lending-club
 spark.executor.cores = 5
-spark.executor.memory = 10G
+spark.executor.memory = 5G --changed using feature1
